--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
+body {
+  margin: 0;
+}
+
+.App h1 {
+  max-width: 50%;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.todo-form {
+  width: calc(50% - 20px);
+  text-align: center;
+  border: 1px solid #ddd;
+  margin-left: 40px;
+  padding: 10px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.todo-form input {
+  padding: 4px;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  border: 1px solid #ddd;
+  height: 30px;
+  width: 80%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todo-form button {
+  height: 40px;
+  padding: 4px;
+  color: #fff;
+  background-color: lightgreen;
+  display: inline-block;
+  cursor: pointer;
+  border: 1px solid green;
+  width: 100px;
 }
